refactor: Removendo flag de ativo e data de deleção
