# src/main/java/br/com/fiap/restaurant/infrastructure/inbound/security/model/AddressDetails.java
@@ -10,11 +10,8 @@ public record AddressDetails(
         String city,
         String state,
         String zipCode,
-
-        Boolean active,
         LocalDateTime createdAt,
-        LocalDateTime updatedAt,
-        LocalDateTime deletedAt
+        LocalDateTime updatedAt
 ) {
 
 }
